source/manifest/cl-workshop-log-generator.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: benchmark-tool-waf
  labels:
    app: flog-fluent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flog-fluent
  template:
    metadata:
      labels:
        app: flog-fluent
    spec:
      containers:
        # WAF ALB
        - name: flog-fluent-bit-waf-alb
          image: public.ecr.aws/aws-gcr-solutions/benchmark-tool-mock-waf:latest
          resources:
            limits:
              cpu: 100m
              memory: 256Mi
          args:
            - /bin/bash
            - -xec
            - |
              /usr/local/fluent-bit/bin/runflb.sh $RUNNING_MODE $NUMBER_OF_PROCESSES_PER_POD
              tail -f /dev/null
        - name: flog-fluent-bit-waf-sql
          image: public.ecr.aws/aws-gcr-solutions/benchmark-tool-mock-waf:latest
          resources:
            limits:
              cpu: 100m
              memory: 256Mi
          args:
            - /bin/bash
            - -xec
            - |
              /usr/local/fluent-bit/bin/runflb.sh $RUNNING_MODE $NUMBER_OF_PROCESSES_PER_POD
              tail -f /dev/null
        - name: flog-fluent-bit-waf-falsely-intercepted
          image: public.ecr.aws/aws-gcr-solutions/benchmark-tool-mock-waf:latest
          resources:
            limits:
              cpu: 100m
              memory: 256Mi
          args:
            - /bin/bash
            - -xec
            - |
              /usr/local/fluent-bit/bin/runflb.sh $RUNNING_MODE $NUMBER_OF_PROCESSES_PER_POD
              tail -f /dev/null
