source/manifest/cl-workshop-e-commerce-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: e-commerce
spec:
  type: NodePort
  selector:
    app: e-commerce-svc
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4000

---
# e-commerce svc
apiVersion: apps/v1
kind: Deployment
metadata:
  name: e-commerce-svc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: e-commerce-svc
  template:
    metadata:
      labels:
        app: e-commerce-svc
    spec:
      containers:
        - name: e-commerce-svc
          image: public.ecr.aws/aws-gcr-solutions/centralized-logging-with-opensearch/workshop-e-commerce:v1.1.0
          resources:
            limits:
              cpu: 800m
              memory: 4096Mi
          ports:
            - containerPort: 4000
              protocol: TCP
