source/manifest/cl-workshop-java.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: java-svc
spec:
  type: NodePort
  selector:
    app: spring-boot
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
# spring-boot
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-boot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-boot
  template:
    metadata:
      labels:
        app: spring-boot
    spec:
      containers:
        - name: spring-boot
          image: public.ecr.aws/aws-gcr-solutions/centralized-logging-with-opensearch-workshop/java:v1.1.0
          resources:
            limits:
              cpu: 200m
              memory: 512Mi
          ports:
            - containerPort: 8080
              protocol: TCP
